siggn in sign form created

--- a/Beryl_Attendance/app/views/employees/new.html.erb
+++ b/Beryl_Attendance/app/views/employees/new.html.erb
@@ -2,7 +2,7 @@
 <%= form_for (@employee) do |f| %>
 <%  if(@employee.errors.any? == true) %>
 <div id = "Error Explanation">
-<h2><%= pluralize(@employee.errors.count, "error") %> Student can't be registered</h2>
+<h2><%= pluralize(@employee.errors.count, "error") %> Employee can't be registered</h2>
 <ul><% @employee.errors.full_messages.each do |msg| %>
    <li><%= msg %></li>
    <% end %>
@@ -12,29 +12,30 @@
   <h1>Sign-up Page </h1>
   <table>
     <tr>
-      <td><%= f.label :fname %></td>
+      <td><%= f.label :fname,'First Name' %></td>
       <td><%= f.text_field :fname %></td>
     </tr>
     <tr>
-      <td><%= f.label :lname %></td>
+      <td><%= f.label :lname, 'Last Name' %></td>
       <td><%= f.text_field :lname %></td>
     </tr>
     <tr>
-      <td><%= f.label :Phoneno %></td>
+      <td><%= f.label :phoneno, 'Phone no' %></td>
       <td><%= f.text_field :phoneno %></td>
     </tr>
     <tr>
-      <td><%= f.label :Email %></td>
+      <td><%= f.label :email,'Email' %></td>
       <td><%= f.text_field :email %></td>
     </tr>
     <tr>
-      <td><%= f.label :Password %></td>
+      <td><%= f.label :Password, 'Password' %></td>
       <td><%= f.password_field :password %></td>
     </tr>
     <tr>
-      <td><%= f.label :Confirmation %></td>
+      <td><%= f.label :password_confirmation, 'Confirm Password' %></td>
       <td><%= f.password_field :password_confirmation %></td>
     </tr>
   </table>
   <%= f.submit 'Submit' %>
 <% end %>
+<%= link_to 'Sign In', '/sessions/new' %>
