--- a/Beryl_Attendance/app/views/employees/index.html.erb
+++ b/Beryl_Attendance/app/views/employees/index.html.erb
@@ -1,2 +1,154 @@
-<%= link_to 'Signup' , '/employees/new' %>
-<%= link_to 'Sign In', '/sessions/new' %>
+<!-- Navigation section
+================================================== -->
+<section class="navbar navbar-default navbar-fixed-top sticky-navigation" role="navigation">
+	<div class="container">
+
+		<div class="navbar-header">
+			<button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				<span class="icon icon-bar"></span>
+				<span class="icon icon-bar"></span>
+				<span class="icon icon-bar"></span>
+			</button>
+			<a href="#" class="navbar-brand">Present Sir!</a>
+		</div>
+		<div class="collapse navbar-collapse">
+			<ul class="nav navbar-nav navbar-right main-navigation">
+				<li><a href="#home" class="smoothScroll">HOME</a></li>
+				<li><a href="#about" class="smoothScroll">ABOUT</a></li>
+        <li><a href="#counter" class="smoothScroll">RULES</a></li>
+			</ul>
+		</div>
+
+	</div>
+</section>
+
+<section id="home" class="parallax-section">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 col-sm-12">
+				<h3 class="wow fadeInDown" data-wow-delay="0.2s">Mark your attendance</h3>
+				<h1 class="wow fadeInDown">Beryl Systems</h1>
+				<%= link_to 'Sign In', '/sessions/new', class: "btn btn-default smoothScroll wow fadeInUp" %>
+				<%= link_to 'Sign Up' , '/employees/new', class: "btn btn-default smoothScroll wow fadeInUp" %>
+			</div>
+
+		</div>
+	</div>		
+</section>
+
+<!-- about section
+================================================== -->
+<section id="about" class="paralla-section">
+	<div class="container">
+		<div class="row">
+        
+			<div class="col-md-6 col-sm-12">
+				<img src="assets/about-img-2.jpg" class="img-responsive" alt="about img 1">
+			</div>
+            
+			<div class="col-md-6 col-sm-12">
+				<div class="about-des">
+					<h4>The most active lifestyle</h4>
+					<h3>Living in MODERN TOWN</h3>
+					<p>This is new HTML5 template that is easy to modify and apply for any kind of your website. This layout is based on Bootstrap v3.3.5 responsive framework. Visit <a rel="nofollow" href="http://www.tooplate.com" target="_parent">Tooplate</a> for more website themes or templates. Credits go to <a rel="nofollow" href="http://unsplash.com" target="_parent">Unsplash</a> and <a rel="nofollow" href="http://pixabay.com" target="_parent">Pixabay</a> for images. Lorem ipsum dolor sit amet, maecenas eget vestibulum.</p>
+				</div>
+			</div>
+
+		</div>
+        
+        <div class="row">
+			
+			<div class="col-md-6 col-sm-12">
+				<div class="about-des">
+					<h4>New Community Mall</h4>
+					<h3>Going to the NEXT Level</h3>
+					<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque, curabitur dolor libero sodales vitae elit massa. Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque, curabitur dolor libero sodales vitae elit massa.</p>
+				</div>
+			</div>
+            
+            <div class="col-md-6 col-sm-12">
+				<img src="assets/about-img-2.jpg" class="img-responsive" alt="about img 2">
+			</div>
+
+		</div>
+	</div>
+</section>
+
+<!-- Counter section
+================================================== -->
+<section id="counter" class="paralla-section">
+	<div class="container">
+		<div class="row">
+
+			<div class="col-md-3 col-sm-3 counter-item">	
+				<h3 class="counter-number" data-from="1" data-to="256" data-speed="1000"></h3>
+				<span class="counter-text">CUSTOMERS</span>
+            </div> 
+            <div class="col-md-3 col-sm-3 counter-item">	
+				<h3 class="counter-number" data-from="1" data-to="512" data-speed="2000"></h3>
+				<span class="counter-text">DEVELOPERS</span>
+            </div>   
+            <div class="col-md-3 col-sm-3 counter-item">	
+				<h3 class="counter-number" data-from="1" data-to="1024" data-speed="3000"></h3>
+				<span class="counter-text">AWESOME PROJECTS</span>
+            </div> 
+             <div class="col-md-3 col-sm-3 counter-item">
+				<h3 class="counter-number" data-from="1" data-to="2048" data-speed="4000"></h3>
+				<span class="counter-text">DESIGNERS</span>
+            </div> 
+              
+
+		</div>
+	</div>
+</section>
+
+
+
+
+<!-- Footer section
+================================================== -->
+<footer>
+	<div class="container">
+		<div class="row">
+
+			<div class="col-md-6 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
+				<h2>Modern Town</h2>
+				<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque, curabitur dolor libero sodales vitae elit massa.</p>
+				<p>Copyright &copy; 2016 Modern Town 
+                
+                | Design: <a rel="nofollow" href="http://www.tooplate.com" target="_parent">Tooplate</a></p>
+			</div>
+			<div class="link-list col-md-2 col-sm-2 wow fadeInUp" data-wow-delay="0.6s">
+				<h2>Company</h2>
+				<a href="#">About</a>
+                <a href="#">Blog</a>
+				<a href="#">Team</a>
+				<a href="#">Career</a>
+			</div>
+			<div class="link-list col-md-2 col-sm-2 wow fadeInUp" data-wow-delay="0.6s">
+				<h2>Support</h2>
+				<a href="#">Email Us</a>
+				<a href="#">FAQs</a>
+				<a href="#">Service Terms</a>
+				<a href="#">Licenses</a>
+			</div>
+			<div class="col-md-2 col-sm-2 wow fadeInUp" data-wow-delay="0.9s">
+				<h2>Network</h2>
+				<ul class="social-icon">
+					<li><a href="#" class="fa fa-facebook wow fadeIn" data-wow-delay="0.3s"></a></li>
+					<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
+					<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
+					<li><a href="#" class="fa fa-behance wow fadeIn" data-wow-delay="1s"></a></li>
+				</ul>
+			<div>
+
+		</div>
+	</div>
+
+	<div class="col-md-12 col-sm-12">
+		<div class="copyright-text wow bounceIn">
+			
+		</div>
+	</div>
+
+</footer>
