--- a/Beryl_Attendance/app/views/employees/new.html.erb
+++ b/Beryl_Attendance/app/views/employees/new.html.erb
@@ -1,43 +1,3 @@
-<%= form_for (@employee) do |f| %>
-<%  if(@employee.errors.any? == true) %>
-<div id = "Error Explanation">
-<h2><%= pluralize(@employee.errors.count, "error") %> Student can't be registered</h2>
-<ul><% @employee.errors.full_messages.each do |msg| %>
-   <li><%= msg %></li>
-   <% end %>
-</ul>
-</div>
-<% end %>
-  <h1>Sign-up Page </h1>
-  <table>
-    <tr>
-      <td><%= f.label :fname %></td>
-      <td><%= f.text_field :fname %></td>
-    </tr>
-    <tr>
-      <td><%= f.label :lname %></td>
-      <td><%= f.text_field :lname %></td>
-    </tr>
-    <tr>
-      <td><%= f.label :Phoneno %></td>
-      <td><%= f.text_field :phoneno %></td>
-    </tr>
-    <tr>
-      <td><%= f.label :Email %></td>
-      <td><%= f.text_field :email %></td>
-    </tr>
-    <tr>
-      <td><%= f.label :Password %></td>
-      <td><%= f.password_field :password %></td>
-    </tr>
-    <tr>
-      <td><%= f.label :Confirmation %></td>
-      <td><%= f.password_field :password_confirmation %></td>
-    </tr>
-  </table>
-  <%= f.submit 'Submit' %>
-<% end %>
-
 
 <!-- Contact section
 ================================================== -->
@@ -50,15 +10,16 @@
         <%= form_for (@employee) do |f| %>
 
           <div class="col-md-12 col-sm-12">
-            <%= f.text_field :fname, class: "form-control", placeholder: "Name", name: "name", id: "name" %>
-            <input type="email" class="form-control" placeholder="Email" name="email" id="email">
-            <input type="text" class="form-control" placeholder="Subject" name="subject">
-            <textarea name="message" rows="8" class="form-control" id="message" placeholder="Message" message="message"></textarea>
+            <%= f.text_field :fname, class: "form-control", placeholder: "First Name" %>
+            <%= f.text_field :lname, class: "form-control", placeholder: "Last Name"%>
+            <%= f.text_field :email, class: "form-control", placeholder: "Email"%>
+            <%= f.password_field :password, class: "form-control", placeholder: "Password" %>
+            <%= f.password_field :password_confirmation, class: "form-control", placeholder: "Confirm Password"%>
           </div>
           <div class="col-md-6 col-sm-6">
-            <input name="submit" type="submit" class="form-control" id="submit" value="Send a message">
+            <%= f.submit 'Submit', type: "submit", class: "form-control" %>
           </div>
-        <% end%>
+        <% end %>
       </div>
       <!-- Contact detail section
       ================================================== -->
