--- a/Beryl_Attendance/app/views/users/new.html.erb
+++ b/Beryl_Attendance/app/views/users/new.html.erb
@@ -1,15 +1,24 @@
 
-<%= form_tag '/users',class: 'user_name' do  %>
-  <table border ="1">
-    <% Date::MONTHNAMES.compact.each do |month| %>
-    <th><%= month %></th>
+<table id='calendar' border ="1" cellpadding="10">
+  <% @beginning_of_month = Date.civil(2016, 01, 1) %>
+  <% @end_of_month = Date.civil(2016, 01, -1) %>
+     <tr><th> </th>
+       <% (@beginning_of_month..@end_of_month).each do |d| %> 
+       <th><%= d.day %></th>
+       <% end %></tr>
+      <% Date::MONTHNAMES.compact.each do |month| %>
+    <tr><td><%= month %></td></tr>
     <% end %>
-    <table>
+    </table>
+  
+<%= form_tag '/users',class: 'user_name' do  %>
+  
     <table>
     <tr>
-      <td>
-      <%= label_tag :time %></td>
-      <td><%= text_field_tag :time%></td>
+<div class='input-append bootstrap-timepicker-component' style='display: inline;'>
+  <input class='dateselect-time input-small' type='text' data-time='12:45 PM'  placeholder="Time..." value="10:35 AM" >
+  <span class='add-on'><i class='icon-time'></i></span>
+</div> 
     <tr>
       <td><%= label_tag :Status %></td>
       <td><%= radio_button_tag 'status', 'present' %>present</td>
