--- a/Beryl_Attendance/app/views/users/new.html.erb
+++ b/Beryl_Attendance/app/views/users/new.html.erb
@@ -1,16 +1,23 @@
 
 <%= form_tag '/users',class: 'user_name' do  %>
+<table border="1">
+<% Date::MONTHNAMES.reject(&:blank?).each do |month| %>
+<th><%=  month %></th>
+<% Time.new(year, month).each do 
+<% end %>
+</table>
   <table>
     <tr>
       <td>
       <%= label_tag :time %></td>
       <td><%= text_field_tag :time%></td>
     <tr>
-      <td><%= label_tag :Status %></td>
+      <td><%= label_tag :Status %></td><br>
       <td><%= radio_button_tag 'status', 'present' %>present</td>
       <td><%= radio_button_tag 'status', 'absent' %>absent</td>
       <td><%= radio_button_tag 'status', 'CL' %>CL</td>
       <td><%= radio_button_tag 'status', 'halfday' %>halfday</td>
+     </tr>
    </table>
 
 <br>
