--- a/Beryl_Attendance/app/views/users/new.html.erb
+++ b/Beryl_Attendance/app/views/users/new.html.erb
@@ -24,19 +24,14 @@
 </table>
 
 <%= form_tag '/users',class: 'user_name' do  %>
-  <table >
-    <tr>
-      <td><%= label_tag :Status %></td><br>
-      <td><%= radio_button_tag 'status', 'present' %>present</td>
-      <td>
-        <div class='input-append bootstrap-timepicker-component' style='display: inline;'>
-        <input class='dateselect-time input-small' type='text' data-time='12:45 PM'  placeholder="Time..." value="10:35 AM" >
-       <span class='add-on'><i class='icon-time'></i></span>
-      </div> </td>
-      <td><%= radio_button_tag 'status', 'absent' %>absent</td>
-      <td><%= radio_button_tag 'status', 'CL' %>CL</td>
-      <td><%= radio_button_tag 'status', 'halfday' %>halfday</td>
-   </tr> 
-  </table> 
+  <%= label_tag :Status %><br>
+  <%= radio_button_tag 'status', 'present' %>present
+  <div class='input-append bootstrap-timepicker-component' style='display: inline;'>
+  <input class='dateselect-time input-small' type='text' data-time='12:45 PM'  placeholder="Time..." value="10:35 AM" >
+  <span class='add-on'><i class='icon-time'></i></span>
+  </div> <br>
+  <%= radio_button_tag 'status', 'absent' %>absent<br>
+  <%= radio_button_tag 'status', 'CL' %>CL<br>
+  <%= radio_button_tag 'status', 'halfday' %>halfday<br>
   <%= submit_tag(value = "Save changes") %>
 <% end %>
