--- a/Beryl_Attendance/app/views/shared/_header.html.erb
+++ b/Beryl_Attendance/app/views/shared/_header.html.erb
@@ -9,13 +9,13 @@
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<a href="#" class="navbar-brand">Present Sir!</a>
+			<%= link_to "Present Sir!" ,'/', class: "navbar-brand" %>
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right main-navigation">
-				<li><a href="#home" class="smoothScroll">HOME</a></li>
-				<li><a href="#about" class="smoothScroll">ABOUT</a></li>
-        <li><a href="#counter" class="smoothScroll">RULES</a></li>
+				<li><%= link_to "HOME" ,'/', class: "smoothScroll" %></li>
+				<li><%= link_to "ABOUT", employees_index_path(:anchor => "about"), class: "smoothScroll" %></li>
+				<li><%= link_to "RULES" , employees_index_path(:anchor => "counter"), class: "smoothScroll" %></li>			
         <% if session[:current_employee].present? %>        
         <li><%= link_to 'Log Out',"/sessions", method: :delete ,class: "smoothScroll" %></li>
         <% end %>
