--- a/Beryl_Attendance/app/views/users/new.html.erb
+++ b/Beryl_Attendance/app/views/users/new.html.erb
@@ -1,39 +1,6 @@
-<%= form_tag '/users',class: 'user_attendance' do  %>
-  <table id='calendar' border ="1" cellpadding="10">
-    <% beginning_of_month = Date.civil(2016, 01, 1) %>
-    <% end_of_month = Date.civil(2016, 01, -1) %>
-    <tr>
-      <td> <%= submit_tag(value = "<", name: 'previous', :id => "previous" ) %></td>
-      <td><%= session[:current_year] %></td>
-      <td> <%= submit_tag(value = ">", name: 'next',:id => "next") %></td>
-    <tr>
-      <td> </td>
-      <% (beginning_of_month..end_of_month).each do |d| %> 
-        <th><%= d.day %></th>
-      <% end %>
-    </tr>
-    <% Date::MONTHNAMES.compact.each do |month| %>
-      <tr>
-        <td><%= month %></td>
-        <% (1..31).each do |date| %>
-          <% attendance = Attendance.select(:status, :time).find_by month: month, date: date ,year: session[:current_year]%>
-          <% if attendance.present? %>
-            <% status = attendance.status %>
-            <% if status == "present" %>
-              <% result = attendance.time %>
-            <% else %>
-              <% result = attendance.status %>
-           <% end %>   
-         <% else %>
-           <% result = "" %> 
-          <% end %>
-       <td><%= result %></td>
-        <% end %>
-      </tr>
-    <% end %>
-</table>
-<% end %>
-
+<div class= "table">
+  <%= render :partial => 'table' %>
+</div>
 <%= form_tag '/users',class: 'user_name' do  %>
   <%= label_tag :Status %><br>
   <%= radio_button_tag 'status', 'present' %>present
@@ -46,9 +13,8 @@
   <%= radio_button_tag 'status', 'CL' %>CL<br>
   <%= radio_button_tag 'status', 'halfday' %>halfday<br>
   <%= submit_tag(value = "Save changes", name: 'Save changes') %>
+  <div class="field">
+    <%= label_tag ("Time of Travel ") %><br>
+    <%= text_field_tag :dot, nil, :id => "timepicker" %>
+  </div>
 <% end %>
-<script>
-$(document).ready(function(){
-  $('#timepicker1').datetimepicker();
-});
-</script>
