--- a/Beryl_Attendance/app/views/users/new.html.erb
+++ b/Beryl_Attendance/app/views/users/new.html.erb
@@ -4,17 +4,19 @@
 <%= form_tag '/users',class: 'user_name' do  %>
   <%= label_tag :Status %><br>
   <%= radio_button_tag 'status', 'present' %>present
-  <div class="input-group bootstrap-timepicker timepicker">
-    <input id="timepicker1" type="text" class="form-control input-small">
-    <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
-  </div>
+  <p id="stepExample1">
+  <%= text_field_tag 'time' %>
+ </p>
  <br>
   <%= radio_button_tag 'status', 'absent' %>absent<br>
   <%= radio_button_tag 'status', 'CL' %>CL<br>
   <%= radio_button_tag 'status', 'halfday' %>halfday<br>
   <%= submit_tag(value = "Save changes", name: 'Save changes') %>
-  <div class="field">
-    <%= label_tag ("Time of Travel ") %><br>
-    <%= text_field_tag :dot, nil, :id => "timepicker" %>
-  </div>
+
+
 <% end %>
+<script type="text/javascript" src="datepair.js"></script>
+<script type="text/javascript" src="jquery.datepair.js"></script>
+<script>
+    $('#stepExample1').timepicker({ 'step': 1 });// initialize input widgets first
+</script>
